Full functionality of the Customers page (CustomerPage.jsx AND RouterPresetsForm.jsx). Got rid of the RouterPresetDTO.java because it convoluted a lot of the code to save fetching/sending a string or two. Not the best for future proofing but it's fine for the scope of the project.